@@ -46,6 +46,7 @@ export(
        GMTOffsetFromTz,
        gravity,
        header,
+       heading,
        imagep,
        interpBarnes,
        integerToAscii,
@@ -80,6 +81,7 @@ export(
        oceSpectrum,
        oce.write.table,
        parseLatLon,
+       pitch,
        plot.adp,
        plot.adv,
        plot.TS,
@@ -126,6 +128,7 @@ export(
        read.section,
        rescale,
        retime,
+       roll,
        secondsToCtime,
        resizableLabel,
        sectionGrid,
