@@ -1,4 +1,5 @@
 0.3-1
+- heading(), pitch(), and roll() added
 - flatten all data objects to be 1 level thick (for future matlab exports)
 - threenum() added, and used in all summaries (for speed)
 
